# CassiopeiaSDK

./: .gitignore  README.md
.github/workflows/: ci.yml  publish.yml
node/: .npmignore  GUIDE.md  README.md  SPEC.md  package-lock.json  package.json
node/src/: agent.js  auth.js  client.js  index.js  schemas.js  tools.js
node/tests/: agent.test.js  auth.test.js  client.test.js  tools.test.js
python/: GUIDE.md  README.md  SPEC.md  pyproject.toml  requirements.txt
python/cassiopeia_sdk/: __init__.py  agent.py  auth.py  client.py  schemas.py  tools.py
python/tests/: __init__.py  test_agent_base.py  test_auth.py  test_client.py  test_tools.py
