[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cassiopeia-sdk"
version = "0.1.0"
authors = [
  { name="sonjuhy" },
]
description = "SDK for Cassiopeia Agent via Redis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "redis>=4.5.0",
    "pydantic>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-org/AgentMonorepo"